# CosmoPINN

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
cosmic_pinn/: __init__.py  data.py  equations.py  evaluate.py  pinn.py  train.py  utils.py
tests/: test_equations.py  test_pinn.py
